add create and delete functuons with delete alert

--- a/styles/base.sass
+++ b/styles/base.sass
@@ -19,14 +19,15 @@ button
   font-family: 'Roboto'
   font-style: normal
   font-weight: 400
-  font-size: 10px
   line-height: 18px
   color: $mark_text_color
 
 .choice_button 
   @extend .text_stile
-  width: 64px
-  height: 24px
+  font-size: 32px
+  width: 25%
+  height: 64px
+  margin: 0 20px 0 20px
   &:hover
     border-color: $mark_color_hover
 
