--- a/styles/main_page.sass
+++ b/styles/main_page.sass
@@ -5,7 +5,7 @@
     display: flex
     flex-direction: row
     justify-content: space-between
-    margin: 32px
+    padding: 32px
 
 .tasks_inputs   
     width: 100%
