--- a/styles/task.css
+++ b/styles/task.css
@@ -15,14 +15,15 @@ button {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-size: 10px;
   line-height: 18px;
   color: #F0E3CA;
 }
 
 .choice_button {
-  width: 64px;
-  height: 24px;
+  font-size: 32px;
+  width: 25%;
+  height: 64px;
+  margin: 0 20px 0 20px;
 }
 .choice_button:hover {
   border-color: #A35709;
