--- a/styles/task_del_alert.css
+++ b/styles/task_del_alert.css
@@ -11,7 +11,7 @@ button {
   background-color: #1F1E1B;
 }
 
-.text_stile, .share_button, .choice_button {
+.text_stile, .alert_box, .share_button, .choice_button {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -78,4 +78,34 @@ input:hover {
   background-image: url("../images/share_button_background_hover.svg");
 }
 
-/*# sourceMappingURL=base.css.map */
+.blur_background {
+  min-width: 600px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  position: absolute;
+}
+
+.alert_box {
+  width: 70%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 50px;
+  background: #1B1A17;
+  border-top: 8px solid #FF8303;
+}
+
+.del_button_section {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  lex-direction: row;
+}
+
+/*# sourceMappingURL=task_del_alert.css.map */
