--- a/styles/base.sass
+++ b/styles/base.sass
@@ -10,8 +10,7 @@ body
 
 button
   cursor: pointer
-  border: 1px solid $mark_color_hover
-  border-radius: 4px
+  border: 3px solid $mark_color_hover
   border-color: $mark_color
   background-color: $light_background_color
 
@@ -28,48 +27,26 @@ button
   width: 25%
   height: 64px
   margin: 0 20px 0 20px
+  border-radius: 16px
   &:hover
     border-color: $mark_color_hover
-
-.share_button
-  @extend .text_stile
-  font-size: 16px
-  font-weight: 600
-  width: 36px
-  height: 36px
-  display: flex
-  align-items: center
-  justify-content: center
-  background-color: $main_background_color
-  &:hover
-    background-color: $light_background_color
 
 input
   width: 100%
   border: 1px solid $mark_color_hover
-  border-radius: 4px
+  border-radius: 8px
   border-color: $mark_color
   background-color: $main_background_color
   color: $mark_text_color
   &:hover
     background-color: $light_background_color
 
-.share_box
-  background-color: $main_background_color
-  display: flex
-  flex-direction: row
-  justify-content: space-between
-  padding: 14px 20px
-
-.share_box_button
-  width: 50px
-  height: 50px
-  display: flex
-  align-items: center
-  justify-content: center
-  border: none
-  background: none
-  background-image: url("../images/share_button_background.svg")
-  background-size: cover
-  &:hover
-    background-image: url("../images/share_button_background_hover.svg")
+.blur_background
+    min-width: 600px
+    width: 100%
+    height: 100%
+    display: flex
+    justify-content: center
+    align-items: flex-end
+    background: rgba(0, 0, 0, 0.8)
+    position: absolute
