--- a/styles/edit_task.css
+++ b/styles/edit_task.css
@@ -10,7 +10,7 @@ button {
   background-color: #1F1E1B;
 }
 
-.text_stile, .alert_box, .choice_button {
+.text_stile, .choice_button, .edit_button {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -18,14 +18,14 @@ button {
   color: #F0E3CA;
 }
 
-.choice_button {
+.choice_button, .edit_button {
   font-size: 32px;
   width: 25%;
   height: 64px;
   margin: 0 20px 0 20px;
   border-radius: 16px;
 }
-.choice_button:hover {
+.choice_button:hover, .edit_button:hover {
   border-color: #A35709;
 }
 
@@ -41,7 +41,7 @@ input:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
@@ -52,28 +52,37 @@ input:hover {
   position: absolute;
 }
 
-.blur_del {
-  justify-content: center;
-  align-items: center;
-}
-
-.alert_box {
-  width: 70%;
-  height: 400px;
+.edit_box {
+  width: 100%;
+  height: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  font-size: 50px;
+  margin: 32px;
   background: #1B1A17;
-  border-top: 8px solid #FF8303;
 }
 
-.del_button_section {
+.head_input {
+  height: 64px;
+  width: 95%;
+  margin: 32px;
+  padding: 16px;
+  font-size: 32px;
+}
+
+.body_input {
   display: flex;
-  justify-content: center;
-  width: 100%;
-  flex-direction: row;
+  height: 100%;
+  width: 95%;
+  padding: 16px;
+  font-size: 32px;
+  margin: 0px 32px 64px 32px;
 }
 
-/*# sourceMappingURL=task_del_alert.css.map */
+.edit_button {
+  width: 128px;
+  font-size: 16px;
+  margin-bottom: 32px;
+}
+
+/*# sourceMappingURL=edit_task.css.map */
