--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -5,13 +5,12 @@ body {
 
 button {
   cursor: pointer;
-  border: 1px solid #A35709;
-  border-radius: 4px;
+  border: 3px solid #A35709;
   border-color: #FF8303;
   background-color: #1F1E1B;
 }
 
-.text_stile, .zero_task_message_text, .share_button, .choice_button {
+.text_stile, .zero_task_message_text, .choice_button {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -24,29 +23,16 @@ button {
   width: 25%;
   height: 64px;
   margin: 0 20px 0 20px;
+  border-radius: 16px;
 }
 .choice_button:hover {
   border-color: #A35709;
 }
 
-.share_button {
-  font-size: 16px;
-  font-weight: 600;
-  width: 36px;
-  height: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #1B1A17;
-}
-.share_button:hover {
-  background-color: #1F1E1B;
-}
-
 input {
   width: 100%;
   border: 1px solid #A35709;
-  border-radius: 4px;
+  border-radius: 8px;
   border-color: #FF8303;
   background-color: #1B1A17;
   color: #F0E3CA;
@@ -55,27 +41,15 @@ input:hover {
   background-color: #1F1E1B;
 }
 
-.share_box {
-  background-color: #1B1A17;
+.blur_background {
+  min-width: 600px;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 14px 20px;
-}
-
-.share_box_button {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
   justify-content: center;
-  border: none;
-  background: none;
-  background-image: url("../images/share_button_background.svg");
-  background-size: cover;
-}
-.share_box_button:hover {
-  background-image: url("../images/share_button_background_hover.svg");
+  align-items: flex-end;
+  background: rgba(0, 0, 0, 0.8);
+  position: absolute;
 }
 
 .create_task_form {
@@ -109,7 +83,8 @@ input:hover {
   background-color: #1B1A17;
   color: #FF8303;
   font-size: 120px;
-  border: 2px solid;
+  border: 4px solid;
+  border-radius: 20px;
 }
 .add_button:hover {
   background-color: #1F1E1B;
