--- a/styles/main_page.sass
+++ b/styles/main_page.sass
@@ -27,7 +27,8 @@
   background-color: base.$main_background_color
   color: base.$mark_color
   font-size: 120px
-  border: 2px solid
+  border: 4px solid
+  border-radius: 20px
   &:hover
     background-color: base.$light_background_color
 
