--- a/styles/task.css
+++ b/styles/task.css
@@ -5,13 +5,12 @@ body {
 
 button {
   cursor: pointer;
-  border: 1px solid #A35709;
-  border-radius: 4px;
+  border: 3px solid #A35709;
   border-color: #FF8303;
   background-color: #1F1E1B;
 }
 
-.text_stile, .head_text_stile, .sub_text_stile, .share_button, .choice_button {
+.text_stile, .interact_button, .head_text_stile, .sub_text_stile, .choice_button {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -24,29 +23,16 @@ button {
   width: 25%;
   height: 64px;
   margin: 0 20px 0 20px;
+  border-radius: 16px;
 }
 .choice_button:hover {
   border-color: #A35709;
 }
 
-.share_button {
-  font-size: 16px;
-  font-weight: 600;
-  width: 36px;
-  height: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #1B1A17;
-}
-.share_button:hover {
-  background-color: #1F1E1B;
-}
-
 input {
   width: 100%;
   border: 1px solid #A35709;
-  border-radius: 4px;
+  border-radius: 8px;
   border-color: #FF8303;
   background-color: #1B1A17;
   color: #F0E3CA;
@@ -55,27 +41,42 @@ input:hover {
   background-color: #1F1E1B;
 }
 
-.share_box {
-  background-color: #1B1A17;
+.blur_background {
+  min-width: 600px;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 14px 20px;
+  justify-content: center;
+  align-items: flex-end;
+  background: rgba(0, 0, 0, 0.8);
+  position: absolute;
 }
 
-.share_box_button {
-  width: 50px;
-  height: 50px;
+.task_interact_buttons {
   display: flex;
+  flex-direction: row-reverse;
+  margin: 16px 32px 32px 32px;
+}
+
+.interact_button {
+  font-size: 40px;
+  font-weight: 600;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  margin-left: 32px;
   align-items: center;
   justify-content: center;
-  border: none;
-  background: none;
-  background-image: url("../images/share_button_background.svg");
-  background-size: cover;
+  border-radius: 16px;
+  border-color: #A35709;
+  background-color: #1B1A17;
 }
-.share_box_button:hover {
-  background-image: url("../images/share_button_background_hover.svg");
+.interact_button:hover {
+  background-color: #1F1E1B;
+}
+
+.button_icon_scale {
+  transform: scale(2.5);
 }
 
 .task {
@@ -83,11 +84,11 @@ input:hover {
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
-  padding: 32px;
-  margin: 32px;
-  border: 2px solid #A35709;
+  padding: 16px;
+  margin: 0px 32px 0px 32px;
+  border: 3px solid #A35709;
   background-color: #1F1E1B;
-  border-radius: 8px;
+  border-radius: 20px;
 }
 
 .dell_button {
@@ -96,7 +97,10 @@ input:hover {
   font-size: 40px;
   font-weight: 400;
   margin-top: 16px;
-  border: 2px solid;
+  margin-right: 16px;
+  border: 4px solid #A35709;
+  border-radius: 8px;
+  transform: scale(1.2);
   background-color: #1B1A17;
 }
 .dell_button:hover {
@@ -118,6 +122,7 @@ input:hover {
   display: flex;
   flex-direction: column;
   margin-right: 10px;
+  width: 90%;
   max-width: 90%;
   overflow-wrap: break-word;
 }
