--- a/styles/task.sass
+++ b/styles/task.sass
@@ -1,15 +1,39 @@
 @use "base" as base
 
+.task_interact_buttons
+  display: flex
+  flex-direction: row-reverse
+  margin: 16px 32px 32px 32px
+
+.interact_button
+  @extend .text_stile
+  font-size: 40px
+  font-weight: 600
+  width: 80px
+  height: 80px
+  display: flex
+  margin-left: 32px
+  align-items: center
+  justify-content: center
+  border-radius: 16px
+  border-color: base.$mark_color_hover
+  background-color: base.$main_background_color
+  &:hover
+    background-color: base.$light_background_color
+
+.button_icon_scale
+  transform: scale(2.5)
+
 .task
     display: flex
     flex-direction: row
     justify-content: space-between
     align-items: start
-    padding: 32px
-    margin: 32px
-    border: 2px solid base.$mark_color_hover
+    padding: 16px
+    margin: 0px 32px 0px 32px
+    border: 3px solid base.$mark_color_hover
     background-color: base.$light_background_color
-    border-radius: 8px
+    border-radius: 20px
 
 .dell_button
     padding: 6px 16px 6px 16px
@@ -17,7 +41,10 @@
     font-size: 40px
     font-weight: 400
     margin-top: 16px
-    border: 2px solid
+    margin-right: 16px
+    border: 4px solid base.$mark_color_hover
+    border-radius: 8px
+    transform: scale(1.2)
     background-color: base.$main_background_color
     &:hover
         background-color: base.$light_background_color
@@ -37,5 +64,6 @@
     display: flex
     flex-direction: column
     margin-right: 10px
+    width: 90%
     max-width: 90%
     overflow-wrap: break-word
