--- a/styles/task_del_alert.sass
+++ b/styles/task_del_alert.sass
@@ -1,18 +1,12 @@
 @use "base" as base
 
-.blur_background
-    min-width: 600px
-    width: 100%
-    height: 100%
-    display: flex
+.blur_del
+    @extend .blur_background
     justify-content: center
     align-items: center
-    background: rgba(0, 0, 0, 0.8)
-    position: absolute
     
 .alert_box
     @extend .text_stile
-
     width: 70%
     height: 400px
     display: flex
@@ -27,4 +21,4 @@
     display: flex
     justify-content: center
     width: 100%
-    lex-direction: row
+    flex-direction: row
