fix button bug and input text position

--- a/styles/base.sass
+++ b/styles/base.sass
@@ -31,7 +31,7 @@ button
   &:hover
     border-color: $mark_color_hover
 
-input
+input, textarea
   width: 100%
   border: 1px solid $mark_color_hover
   border-radius: 8px
