--- a/styles/task.css
+++ b/styles/task.css
@@ -76,7 +76,8 @@ input:hover {
 }
 
 .button_icon_scale {
-  transform: scale(2.5);
+  width: 30px;
+  height: 30px;
 }
 
 .task {
@@ -91,8 +92,8 @@ input:hover {
   border-radius: 20px;
 }
 
-.dell_button {
-  padding: 6px 16px 6px 16px;
+.del_button {
+  padding: 14px 24px 14px 24px;
   color: #FF8303;
   font-size: 40px;
   font-weight: 400;
@@ -100,10 +101,9 @@ input:hover {
   margin-right: 16px;
   border: 4px solid #A35709;
   border-radius: 8px;
-  transform: scale(1.2);
   background-color: #1B1A17;
 }
-.dell_button:hover {
+.del_button:hover {
   background-color: #1F1E1B;
 }
 
