--- a/styles/task.sass
+++ b/styles/task.sass
@@ -22,7 +22,8 @@
     background-color: base.$light_background_color
 
 .button_icon_scale
-  transform: scale(2.5)
+  width: 30px
+  height: 30px
 
 .task
     display: flex
@@ -35,8 +36,8 @@
     background-color: base.$light_background_color
     border-radius: 20px
 
-.dell_button
-    padding: 6px 16px 6px 16px
+.del_button
+    padding: 14px 24px 14px 24px
     color: base.$mark_color
     font-size: 40px
     font-weight: 400
@@ -44,7 +45,6 @@
     margin-right: 16px
     border: 4px solid base.$mark_color_hover
     border-radius: 8px
-    transform: scale(1.2)
     background-color: base.$main_background_color
     &:hover
         background-color: base.$light_background_color
