fix position shadow background

--- a/styles/base.sass
+++ b/styles/base.sass
@@ -49,4 +49,4 @@ input, textarea
     justify-content: center
     align-items: flex-end
     background: rgba(0, 0, 0, 0.8)
-    position: absolute
+    position: fixed
