--- a/styles/base.css
+++ b/styles/base.css
@@ -49,7 +49,7 @@ input:hover, textarea:hover {
   justify-content: center;
   align-items: flex-end;
   background: rgba(0, 0, 0, 0.8);
-  position: absolute;
+  position: fixed;
 }
 
 /*# sourceMappingURL=base.css.map */
