--- a/styles/task_del_alert.css
+++ b/styles/task_del_alert.css
@@ -29,7 +29,7 @@ button {
   border-color: #A35709;
 }
 
-input {
+input, textarea {
   width: 100%;
   border: 1px solid #A35709;
   border-radius: 8px;
@@ -37,7 +37,7 @@ input {
   background-color: #1B1A17;
   color: #F0E3CA;
 }
-input:hover {
+input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
@@ -49,7 +49,7 @@ input:hover {
   justify-content: center;
   align-items: flex-end;
   background: rgba(0, 0, 0, 0.8);
-  position: absolute;
+  position: fixed;
 }
 
 .blur_del {
