simplified sass file system

--- a/styles/edit_task.sass
+++ b/styles/edit_task.sass
@@ -25,7 +25,12 @@
     margin: 0px 32px 64px 32px
 
 .edit_button
-    @extend .choice_button
+    @extend .text_stile
     width: 128px
     font-size: 16px
     margin-bottom: 32px
+    height: 64px
+    margin: 0 20px 0 20px
+    border-radius: 16px
+    &:hover
+        border-color: $mark_color_hover
