--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,7 @@ input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
@@ -97,7 +97,7 @@ input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
@@ -192,7 +192,7 @@ input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
@@ -302,7 +302,7 @@ input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
@@ -385,7 +385,7 @@ input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
@@ -397,8 +397,14 @@ input:hover, textarea:hover {
 }
 
 .blur_del {
+  min-width: 600px;
+  width: 100%;
+  height: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
 }
 
 .alert_box {
@@ -465,7 +471,7 @@ input:hover, textarea:hover {
   background-color: #1F1E1B;
 }
 
-.blur_background, .blur_del {
+.blur_background {
   min-width: 600px;
   width: 100%;
   height: 100%;
