--- a/styles/task_del_alert.sass
+++ b/styles/task_del_alert.sass
@@ -1,9 +1,14 @@
 @use "base" as base
 
 .blur_del
-    @extend .blur_background
+    min-width: 600px
+    width: 100%
+    height: 100%
+    display: flex
     justify-content: center
     align-items: center
+    background: rgba(0, 0, 0, 0.8)
+    position: fixed
     
 .alert_box
     @extend .text_stile
